--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <link href="script.js">
+  <link type="text/javascript" href="script.js">
 </head>
 
 <div class="marquee">
