Trying to fix issues

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 <div class="cover-bg">
   <div class="body-stuff">
-  <h2>We have no idea what we're doing</h2>
     <h1><a href="https://www.instagram.com/bungo.studio/">@bungo.studio</a></h1>
+    <h2>We have no idea what we're doing — Aggie &amp; Spencer</h2>
     <h3>Based on a codepen by <a href="https://codepen.io/stezu/">Stephen Zuniga</a></h3>
   </div>
 </div>
