Update copy on index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="cover-bg">
   <div class="body-stuff">
     <h1><a href="https://www.instagram.com/bungo.studio/">@bungo.studio</a></h1>
-    <h2>We have no idea what we're doing — Aggie &amp; Spencer</h2>
+    <h2>Doodles and Boops by Aggie and Spencer</h2>
     <h3>Based on a codepen by <a href="https://codepen.io/stezu/">Stephen Zuniga</a></h3>
   </div>
 </div>
